tests/rosetta/out/Fortran/best-shuffle.error
gfortran: exit status 1
/tmp/best-shuffle.f90:65:5:

   65 |     t = r(((0)+1))
      |     1
Error: Unclassifiable statement at (1)
/tmp/best-shuffle.f90:110:8:

  110 |     seed = 1
      |        1
Error: Symbol ‘seed’ at (1) has no IMPLICIT type
/tmp/best-shuffle.f90:109:25:

  109 |     ts = (/'abracadabra','seesaw','elk','grrrrrr','up','a'/)
      |                         1
Error: Different CHARACTER lengths (11/6) in array constructor at (1)
/tmp/best-shuffle.f90:118:35:

  118 |       print *, trim(trim(trim(trim(ts(((i)+1)) // ' -> ') // shuf) // ' (') // s2) // ')'
      |                                   1
Error: Operands of string concatenation operator at (1) are INTEGER(4)/CHARACTER(4)
/tmp/best-shuffle.f90:38:28:

   38 |       app0(size(chars)+1) = s(i+1:(i + 1))
      |                            1
Error: Cannot convert CHARACTER(*) to INTEGER(4) at (1)
/tmp/best-shuffle.f90:34:24:

   34 |     do while ((i < size(s)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/best-shuffle.f90:52:10:

   52 |     res = ''
      |          1
Error: Cannot convert CHARACTER(0) to INTEGER(4) at (1)
/tmp/best-shuffle.f90:58:4:

   58 |     res = (/res,sd/)
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/best-shuffle.f90:69:24:

   69 |     do while ((i < size(t)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/best-shuffle.f90:81:30:

   81 |         if ((((((i /= j) .and. arr(((i)+1))) /= s(j+1:(j + 1))) .and. arr(((j)+1))) /= s(i+1:(i + 1)))) then
      |                              1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/best-shuffle.f90:94:11:

   94 |       if ((arr(((i)+1)) == s(i+1:(i + 1)))) then
      |           1
Error: Operands of comparison operator ‘==’ at (1) are INTEGER(4)/CHARACTER(*)
/tmp/best-shuffle.f90:102:13:

  102 |       out = (out + arr(((i)+1)))
      |             1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/INTEGER(4)
/tmp/best-shuffle.f90:105:16:

  105 |     res = (/out,sd,count/)
      |                1
Error: Element in CHARACTER(100) array constructor at (1) is INTEGER(4)
